# Teaching-os-STE

./: .gitignore  AGENTS.md  README.md  codebase_specification.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
rubricore-engine/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
rubricore-engine/alembic/: README  env.py
rubricore-engine/app/: AGENTS.md  __init__.py  worker.py
rubricore-engine/docs/: AGENTS.md  design-system.md  release-review.md  setup.md  use-cases-and-case-studies.md
rubricore-engine/scripts/: AGENTS.md  parse_material.py  run_public_evaluation_fixture.py  seed_dev.py  smoke_ingest_public_fixture.py  smoke_phase4_http_api.py  smoke_pilot_review_actions.py
rubricore-engine/tests/: AGENTS.md  test_ai_broker_routing.py  test_answer_lifecycle.py  test_artifact_provenance.py  test_gemini_provider.py  test_grading_orchestration.py  test_groq_provider.py  test_knowledge_library_db.py  test_knowledge_library_phase2.py  test_ollama_provider.py  test_openrouter_provider.py  test_parse_material.py  test_phase2_pilot_contracts.py  test_phase2_pilot_services.py  test_phase2_pilot_workflows.py  test_phase3_evaluation_foundation.py  test_phase4_api_adapters.py  test_phase4_http_api.py  test_phase4_http_smoke_script.py  test_phase5a_api_readiness.py  test_phase5b_auth_tenancy_design.py  test_phase5c_auth_plan_docs.py  test_phase6a_fastapi_subject_pack.py  test_phase6b_auth_provider.py  test_phase6b_auth_provider_docs.py  test_phase6c_auth_provider_selection_docs.py  test_phase6e_fastapi_grading_route.py  (+5 more)
(+211 files in other folders)
